--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,18 +73,18 @@
       <tbody>
         <!-- Example data row -->
         <tr>
-          <td>Atlantic North</td>
-          <td>20</td>
-          <td>8.1</td>
-          <td>Low</td>
+          <td>Data 1</td>
+          <td>Data 2</td>
+          <td>Data 3</td>
+          <td>Data 4</td>
           <td>
             <ul>
-              <li>Species 1 (Endangered)</li>
+              <li>Data 5</li>
             </ul>
           </td>
           <td>
             <ul>
-              <li>Project 1 - Type A (Participation)</li>
+              <li>Data 6</li>
             </ul>
           </td>
         </tr>
@@ -105,7 +105,7 @@
     <p>Marianne Nocce Pinheiro - RM93255</p>
     <p>Luana Ramos dos Santos - RM94670</p>
   </div>
-  
+
 </div>
 
 
